--- a/themes/rcforward/sass/_content.scss
+++ b/themes/rcforward/sass/_content.scss
@@ -52,11 +52,11 @@ body {
   background: $credible__blue;
   color: $grounded__green;
   font-family: $montserrat__font;
-  
+
   @include font-size(0.9);
-  @include tablet{
+  @include tablet {
     @include font-size(1);
-  };
+  }
 }
 
 .site-content {
@@ -70,20 +70,24 @@ body {
 }
 
 /* Chimp Donate Button */
-.chimp-donate-form, .donate-page-button {
+.chimp-donate-form,
+.donate-page-button {
   background-color: $code__blue;
   font-size: 1rem;
   font-weight: 700;
-  padding: 1rem 3rem;
+  padding: 1rem 2rem;
   color: $grounded__green;
   border-radius: 8px;
+  &:hover {
+    text-shadow: $textshadow__green;
+    box-shadow: 0px 2px 2px darken($code__blue, 30%);
+  }
   @include tablet {
     font-size: 1.2rem;
-    padding: 1rem 3rem;
+    padding: 1rem 2.5rem;
   }
   @include desktop {
-    font-size: 1.7rem;
-    padding: 1.5rem 3.7rem;
+    padding: 1.3rem 2.8rem;
   }
 }
 
@@ -104,9 +108,8 @@ body {
   }
 }
 
-.header-offset{
-  @include tablet-large{
-    height:82px;
-
+.header-offset {
+  @include tablet-large {
+    height: 82px;
   }
 }
