--- a/themes/rcforward/sass/_widgets.scss
+++ b/themes/rcforward/sass/_widgets.scss
@@ -55,6 +55,10 @@
           padding: 0.7rem 1rem;
           border-radius: 0 6px 6px 0;
           border: none;
+          &:hover{
+            text-shadow: $textshadow__green;
+            box-shadow: 0px 2px 2px darken($code__blue,30%);
+        }
         }
       }
     }
