--- a/themes/rcforward/style.css
+++ b/themes/rcforward/style.css
@@ -581,6 +581,10 @@ button {
         padding: 0.7rem 1rem;
         border-radius: 0 6px 6px 0;
         border: none; }
+        .footer-sidebar .widget .mc4wp-form .mc4wp-form-fields input[type='submit']:hover {
+          text-shadow: 1px 0.5px 1px #008b7b;
+          -webkit-box-shadow: 0px 2px 2px #002521;
+                  box-shadow: 0px 2px 2px #002521; }
   @media (min-width: 600px) {
     .footer-sidebar .widget .mc4wp-form .mc4wp-form-fields input[type='email'] {
       width: 240px; } }
@@ -855,6 +859,11 @@ body .hide-desktop {
       display: inline-block;
       color: #42299A;
       border-radius: 8px; }
+      .page-template-page-how-it-works .site-content .entry-header .entry-contact-us .contact-us-button:hover {
+        background-color: #42299A;
+        color: #fff;
+        -webkit-box-shadow: 0px 3px 3px #000;
+                box-shadow: 0px 3px 3px #000; }
       @media (min-width: 600px) {
         .page-template-page-how-it-works .site-content .entry-header .entry-contact-us .contact-us-button {
           font-size: 1.2rem;
@@ -865,7 +874,7 @@ body .hide-desktop {
           padding: 1.3rem 2.6rem; } }
 
 .page-template-page-how-it-works .site-content .entry-main {
-  margin: 4rem 2rem 0;
+  margin: 4rem 2.7rem 2rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -905,9 +914,11 @@ body .hide-desktop {
       .page-template-page-how-it-works .site-content .entry-main .wp-block-columns:first-child .wp-block-column:last-child {
         position: absolute; } }
   @media (min-width: 1000px) {
-    .page-template-page-how-it-works .site-content .entry-main .wp-block-columns .wp-block-column:first-child p:first-child strong {
-      color: #14225F;
-      font-size: 1.5rem; } }
+    .page-template-page-how-it-works .site-content .entry-main {
+      margin: 4rem 7rem 2rem; }
+      .page-template-page-how-it-works .site-content .entry-main .wp-block-columns .wp-block-column:first-child p:first-child strong {
+        color: #14225F;
+        font-size: 1.5rem; } }
   @media (min-width: 1000px) {
     .page-template-page-how-it-works .site-content .entry-main .wp-block-columns:first-child .wp-block-column:last-child .wp-block-image {
       text-align: right; } }
@@ -1017,7 +1028,7 @@ body .hide-desktop {
     width: 85%;
     margin: 0 auto 2.3rem; }
     .single-fund .hfeed .site-content .type-fund .entry-content p {
-      font-size: .9rem;
+      font-size: 1rem;
       line-height: 2rem;
       margin-top: 0; }
     .single-fund .hfeed .site-content .type-fund .entry-content .entry-title {
@@ -1044,7 +1055,7 @@ body .hide-desktop {
       .single-fund .hfeed .site-content .type-fund .entry-content .fund-description p {
         width: 86%;
         line-height: 2rem;
-        font-size: 1rem;
+        font-size: 1.1rem;
         font-weight: lighter;
         word-wrap: break-word;
         margin: 0 auto; }
@@ -1072,7 +1083,7 @@ body .hide-desktop {
           word-wrap: break-word;
           color: #14225F;
           margin: 0 auto;
-          font-size: 1.3rem;
+          font-size: 1.1rem;
           line-height: 2.4rem;
           font-weight: 600; }
         .single-fund .hfeed .site-content .type-fund .entry-content .main-content .fund-allowcation .fund-allowcations {
@@ -1098,9 +1109,18 @@ body .hide-desktop {
               font-weight: bolder;
               margin: 3.3rem 0.5rem; }
             .single-fund .hfeed .site-content .type-fund .entry-content .main-content .fund-allowcation .fund-allowcations .single-allocation .allocation-text .description {
-              font-size: .9rem;
+              font-size: 1rem;
               margin: 0 2rem;
               line-height: 2.3rem; }
+    @media (min-width: 600px) {
+      .single-fund .hfeed .site-content .type-fund .entry-content .fund-description p {
+        font-size: 1.3rem; }
+      .single-fund .hfeed .site-content .type-fund .entry-content .main-content .fund-allowcation h3 {
+        font-size: 1.3rem; }
+      .single-fund .hfeed .site-content .type-fund .entry-content .main-content .fund-allowcation .fund-allowcations .single-allocation .allocation-text .description {
+        font-size: 1.2rem; }
+      .single-fund .hfeed .site-content .type-fund .entry-content .main-content .entry-content p {
+        font-size: 1.2rem; } }
     @media (min-width: 1000px) {
       .single-fund .hfeed .site-content .type-fund .entry-content .entry-title {
         font-size: 2.2rem; }
@@ -1262,7 +1282,7 @@ body .hide-desktop {
     padding-top: 4rem; }
     .page-template-page-team .site-content .entry-content .single-member .contact-button a {
       cursor: pointer;
-      border: 2px solid #42299a;
+      border: 2px solid #f5f4fc;
       font-size: 1.2rem;
       font-weight: bolder;
       padding: 1rem 1.7rem;
@@ -1270,6 +1290,13 @@ body .hide-desktop {
       color: #fff;
       border-radius: 8px;
       background-color: #14225F; }
+      .page-template-page-team .site-content .entry-content .single-member .contact-button a:hover {
+        text-shadow: #14225F;
+        background-color: #fff;
+        color: #14225F;
+        -webkit-box-shadow: 0px 3px 3px #14225F;
+                box-shadow: 0px 3px 3px #14225F;
+        border: 2px solid #14225F; }
 
 @media (min-width: 600px) {
   .page-template-page-team .site-content .entry-content .single-member .member-photo img {
@@ -1412,7 +1439,7 @@ body .hide-desktop {
 
 @media (min-width: 1000px) {
   .page-template-page-faq .site-content .main-section {
-    background-color: #F8F8FC;
+    background-color: #f8f8fc;
     margin: 0 auto; }
     .page-template-page-faq .site-content .main-section .entry-header {
       background-color: #fff;
@@ -2097,13 +2124,16 @@ ol.flickity-page-dots {
     display: none; }
     .site-footer .top-footer .footer-nav .menu-footer-menu-container ul {
       list-style: none;
-      padding-left: 6rem; }
+      padding-left: 6rem;
+      margin-top: 5rem; }
       @media (min-width: 1000px) {
         .site-footer .top-footer .footer-nav .menu-footer-menu-container ul li {
-          margin: 2rem 0;
+          margin: 2rem 0 .7rem;
           width: 9rem; }
           .site-footer .top-footer .footer-nav .menu-footer-menu-container ul li a {
-            color: #00BEA8; } }
+            color: #00BEA8; }
+            .site-footer .top-footer .footer-nav .menu-footer-menu-container ul li a:hover {
+              color: #fff; } }
     @media (min-width: 1000px) {
       .site-footer .top-footer .footer-nav {
         display: unset; } }
@@ -2136,7 +2166,9 @@ ol.flickity-page-dots {
             flex-direction: column;
         -webkit-box-align: start;
             -ms-flex-align: start;
-                align-items: flex-start; } }
+                align-items: flex-start; }
+        .site-footer .top-footer .footer-info .hide-mobile {
+          width: 5rem; } }
     .site-footer .top-footer .footer-info p {
       display: none; }
       @media (min-width: 1000px) {
