--- a/themes/rcforward/sass/_flickity.scss
+++ b/themes/rcforward/sass/_flickity.scss
@@ -165,6 +165,10 @@ ol.flickity-page-dots{
         background:$code__blue;
         padding:1.1rem 1.5rem;
         border-radius: 7px; 
+        &:hover{
+            text-shadow: $textshadow__green;
+            box-shadow: 0px 2px 2px darken($code__blue,30%);
+        }
     }
 }
 .browse-charity-subtitle{
