--- a/themes/rcforward/sass/_front-page.scss
+++ b/themes/rcforward/sass/_front-page.scss
@@ -362,6 +362,10 @@
                             border:2px solid $innovative__purple;
                             width:80%;
                             padding:1.2rem 1.5rem;
+                            &:hover{
+                                text-shadow: $textshadow__white;
+                                box-shadow: 0px 3px 5px $innovative__purple;
+                            }
                             @include display-flex();
                             margin:0 auto;
                             border-radius: 7px;
